# SiNIMin

./: .gitignore  README.md  README1.md
SiNIMin/C/: CMakeLists.txt  makefile
SiNIMin/C/methods/: sinimin_func.cpp  sinimin_fwer.cpp  sinimin_wy_func.cpp
SiNIMin/C/struct/: data.cpp  edges.cpp  interval.hpp  support.hpp  tarone_cmh.cpp  tarone_cmh_wy_fwer.cpp  timer.cpp
SiNIMin/C/utils/: output.cpp  utils.cpp
SiNIMin/C/utils/EasyGWAS/: gamma.h
SiNIMin/PY/: postprocess_pvalues.py  postprocess_significant.py
SiNIMin/compiled/: sinimin  sinimin_fwer
SiNIMin/compiled_euler/: makefile  sinimin  sinimin_fwer
SiNIMin/tests/compiled/: check_tarone_classes  debug_siniminWY  debug_sinimin_fwer  edge_epistasis  edge_epistasis_wy  sim_ps_0.05_pcon_0.05_simID_0_tarone.txt
SiNIMin/tests/main/: check_binary_data_classes.cpp  check_tarone_classes.cpp  debug_fwer_estimation.cpp  edge_epistasis.cpp  interval_test.cpp
TaroneCpp/C/: makefile
TaroneCpp/C/main/: Makefile  a.out  edge_epistasis.cpp  interval_test.cpp  sinimin.cpp  support_test.cpp  (+1 more)
TaroneCpp/PY/: postprocess_pvalues.py  postprocess_significant.py
TaroneCpp/compiled/: .nfs00000000000941c800001ca4  .nfs000000000009429900001ca5  .nfs00000000000943960000000e  .nfs0000000000098f3600000044  check_data_classes  edge_epistasis  sinimin_fwer
TaroneCpp/compiled_euler/: makefile
TaroneCpp/tests/: makefile
examples/data/: example_data_C.txt  example_data_X.txt  example_data_Y.txt  example_data_log.txt  example_data_snpID.txt  example_data_snp_map.txt
examples/runs/: example_sinimin.sh  example_siniminWY.sh
(+91 files in other folders)
